--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,6 +18,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('index') }}">Home</a></li>
                     <li><a href="{{ url_for('explore') }}">Explore</a></li>
+                    <li><a href="{{ url_for('add_movie') }}">Add Movie</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_anonymous %}
