--- a/app/templates/add_movie.html
+++ b/app/templates/add_movie.html
@@ -7,5 +7,17 @@
         <div class="col-md-4">
             {{ wtf.quick_form(form) }}
         </div>
+        <div class="col-md-8">
+          <table class="table table-hover">
+              <tr>
+                <th>Movie Title</th>
+                <th>Genre(s)</th>
+                <th>Votes</th>
+              </tr>
+              {% for movie in movie_list %}
+                  {% include '_movie_list.html' %}
+              {% endfor %}
+          </table>
+        </div>
     </div>
 {% endblock %}
