--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,9 +17,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('index') }}">Home</a></li>
-                    <li><a href="{{ url_for('explore') }}">Explore</a></li>
+		    <li><a href="{{ url_for('leaderboard') }}">Leaderboard</a></li>
                     <li><a href="{{ url_for('add_movie') }}">Add Movie</a></li>
                     <li><a href="{{ url_for('vote') }}">Vote</a></li>
+
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_anonymous %}
