--- a/app/templates/vote.html
+++ b/app/templates/vote.html
@@ -2,7 +2,7 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>Please vote for your favourite movies</h1>
+    <h1>Vote for your favourite movies!</h1>
     <div class="row">
         <div class="col-md-4">
             {{ wtf.quick_form(form) }}
