--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,7 +18,10 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('index') }}">Home</a></li>
 		    <li><a href="{{ url_for('leaderboard') }}">Leaderboard</a></li>
+                    {% if current_user.admin == True %}
                     <li><a href="{{ url_for('add_delete_movie') }}">Add or Delete Movies</a></li>
+                    {% endif %}
+                    <li><a href="{{ url_for('suggestions') }}">Suggestions</a></li>
                     <li><a href="{{ url_for('vote') }}">Vote</a></li>
 
                 </ul>
