--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 {% import 'bootstrap/wtf.html' as wtf %}
 {% block app_content %}
-    {% if user==current_user %}
+    {% if user == current_user %}
     <h1>Hi, {{ current_user.username }}!</h1>
     {% endif %}
+    <p style="color:blue;"> Welcome to MovieVote! A page where you can vote on your favourite movies,
+       and discuss your choices with fellow movie lovers. <p>
     {% if form %}
     {{ wtf.quick_form(form) }}
     <br>
