--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,29 +1,91 @@
-{% extends 'bootstrap/base.html' %}
-{% block title %}
-    {% if title %}{{ title }} - MovieVote{% else %}Welcome to MovieVote{% endif %}
-{% endblock %}
-{% block navbar %}
-    <nav class="navbar navbar-default">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="{{ url_for('index') }}">MovieVote</a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-		    <li><a href="{{ url_for('leaderboard') }}">Leaderboard</a></li>
-                    {% if current_user.admin == True %}
-                    <li><a href="{{ url_for('add_delete_movie') }}">Add or Delete Movies</a></li>
-                    {% endif %}
-                    <li><a href="{{ url_for('suggestions') }}">Suggestions</a></li>
-                    <li><a href="{{ url_for('vote') }}">Vote</a></li>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width = device-width, initial-scale =1">
 
-                </ul>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+  <link rel ="stylesheet" href="{{ url_for('static', filename='css/sb-admin.css') }}">
+  <!-- Custom fonts for this template-->
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+<!-- Page level plugin CSS-->
+  <link href="vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
+  <style type="text/css">
+
+    body {
+    padding-top: 60px;
+  }
+
+    .pageinfo{
+      background-color: bg-dark;
+      height:80px;
+      width:100%;
+    }
+    .navbar{
+      margin-top:0px;
+      height:60px;
+      position:fixed;
+      width:100%;
+      z-index:10;
+      border-radius:0;
+      border-color:transparent;
+    }
+
+    .carousel-item{
+      height:100%;
+    }
+
+    .carousel-item img{
+      height:100%;
+    }
+  </style>
+</head>
+<body>
+ {% block navbar %}
+ <!--Navbar -->
+ <div class="container-fluid">
+   <div class="row">
+     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+       <a class="navbar-brand" href="{{ url_for('index') }}">Home</a>
+       <div class="collapse navbar-collapse" id="navbarSupportedContent">
+         <ul class="navbar-nav mr-auto">
+           <li class="nav-item active">
+             <a class="nav-link" href="{{ url_for('leaderboard') }}">Leaderboard <span class="sr-only">(current)</span></a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="{{ url_for('suggestions') }}">Suggestions</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="{{ url_for('vote') }}">Vote</a>
+           </li>
+         </ul>
+         <ul class="navbar-nav ml-auto">
+           {% if current_user.is_anonymous %}
+           <li class="nav-item">
+           <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+           </li>
+           {% else %}
+           <li class="nav-item">
+           <a class="nav-link" href="{{ url_for('user', username=current_user.username) }}">Profile</a>
+           </li>
+           <li class="nav-item">
+           <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+           </li>
+           {% endif %}
+         </ul>
+       </div>
+     </nav>
+   </div>
+ </div>
+<!--/.Navbar -->
+
+
+
+
+<!--                </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_anonymous %}
                     <li><a href="{{ url_for('login') }}">Login</a></li>
@@ -34,18 +96,25 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav>-->
 {% endblock %}
 {% block content %}
     <div class="container">
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            {% for message in messages %}
-            <div class="alert alert-info" role="alert">{{ message }}</div>
-            {% endfor %}
-        {% endif %}
-        {% endwith %}
-        {# application content needs to be provided in the app_content block #}
-        {% block app_content %}{% endblock %}
+      {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-info" role="alert">{{ message }}</div>
+        {% endfor %}
+      {% endif %}
+      {% endwith %}
     </div>
-{% endblock %}
+
+        <!--{# application content needs to be provided in the app_content block #} -->
+{% block app_content %}{% endblock %}
+<!--{% endblock %}-->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="{{ url_for('static', filename='js/sb-admin.min.js') }}"></script>
+</body>
+</html>
