--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,15 +1,49 @@
 {% extends "base.html" %}
 {% import 'bootstrap/wtf.html' as wtf %}
 {% block app_content %}
+<div class="container-fluid"> <!-- this is to make it responsive to your screen width -->
+    <div class="row">
+        <div class="pageinfo text-light bg-dark">  <!-- myClassName is defined in my CSS as you defined your container -->
+            <h1 class="text-center"> Welcome To MovieVote </h1>
+            <p class="text-center"> Here we need your opinions on your favourite movies to once and for all see who comes out on top <p>
+        </div>
+    </div>
+</div>
+
+
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner-new">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="{{ url_for('static', filename='Interstellar2.jpg') }}" alt="First slide">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>My Caption Title (1st Image)</h5>
+                <p>The whole caption will only show up if the screen is at least medium size.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{{ url_for('static', filename='Endgame3.png') }}" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{{ url_for('static', filename='HarryPotterDeathlyHallows2.jpg') }}" alt="Third slide">
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+<!--
     {% if user == current_user %}
-    <h1>Hi, {{ current_user.username }}!</h1>
-    {% endif %}
-    <p style="color:blue;"> Welcome to MovieVote! A page where you can vote on your favourite movies,
-       and discuss your choices with fellow movie lovers. <p>
-    {% if form %}
-    <h2> Welcome to MovieVote! </h2>
     {{ wtf.quick_form(form) }}
-    <br>
     {% endif %}
     <h4> See what your followed users have been up to! </h4>
     {% for post in posts %}
@@ -29,4 +63,5 @@
             </li>
         </ul>
     </nav>
+-->
 {% endblock %}
