--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -1,17 +1,5 @@
-    <table class="table table-hover">
-        <tr>
-            <td width="70px">
-                <a href="{{ url_for('user', username=post.author.username) }}">
-                    <img src="{{ post.author.avatar(70) }}" />
-                </a>
-            </td>
-            <td>
-                <a href="{{ url_for('user', username=post.author.username) }}">
-                    {{ post.author.username }}
-                </a>
-                says:
-                <br>
-                {{ post.body }}
-            </td>
-        </tr>
-    </table>
+<img class="d-flex mr-3 rounded-circle" src="{{ post.author.avatar(70) }}" alt="">
+<div class="media mb4">
+  <h5 class="mt-0">  {{ post.author.username }} </h5>
+    <p>{{ post.body }}</p>
+</div>
