--- a/app/templates/add_delete_movie.html
+++ b/app/templates/add_delete_movie.html
@@ -1,30 +1,145 @@
 {% extends "base.html" %}
-{% import 'bootstrap/wtf.html' as wtf %}
 
-{% block app_content %}
-    <h1>Add Movie</h1>
-    <div class="row">
-        <div class="col-md-4">
-            {{ wtf.quick_form(add_form) }}
-        </div>
-        <div class="col-md-8">
-          <table class="table table-hover">
-              <tr>
-                <th>Movie Title</th>
-                <th>Genre(s)</th>
-                <th>Votes</th>
-              </tr>
-              {% for movie in movie_list %}
-                  {% include '_movie_list.html' %}
-              {% endfor %}
-          </table>
-        </div>
-    </div>
+{% block navbar %}
 
-    <h2> Delete Movie </h2>
-    <div class="row">
-        <div class="col-md-4">
-            {{ wtf.quick_form(delete_form) }}
+<nav class="navbar navbar-expand navbar-dark bg-dark fixed-top">
+
+    <a class="navbar-brand mr-1" href="{{ url_for('index') }}">MovieVote</a>
+
+    <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
+      <i class="fa fa-bars"></i>
+    </button>
+
+    <!-- Navbar -->
+    <ul class="navbar-nav ml-auto">
+      {% if current_user.is_anonymous %}
+      <li class="nav-item">
+      <a class="nav-link" href="{{ url_for('login') }}"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
+      </li>
+      {% else %}
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('user', username=current_user.username) }}"> <i class="fa fa-user-o" aria-hidden="true"></i> Profile</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('logout') }}"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a>
+      </li>
+      {% endif %}
+    </ul>
+
+  </nav>
+
+{% endblock %}
+
+{% block app_content%}
+  <div id="wrapper">
+
+
+    <!-- Sidebar -->
+
+    <ul class="sidebar navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="{{ url_for('leaderboard') }}">
+          <i class="fa fa-imdb" aria-hidden="true"></i> Leaderboard
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('suggestions') }}">
+          <i class="fa fa-commenting" aria-hidden="true"></i> Suggest Movies or Polls
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('vote') }}">
+          <i class="fa fa-check-square-o" aria-hidden="true"></i> Vote
+        </a>
+      </li>
+      {% if current_user.admin == True %}
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('add_delete_movie') }}">
+          <i class="fa fa-plus-square" aria-hidden="true"></i>
+          Add or <i class="fa fa-minus-square" aria-hidden="true"></i> Delete Movies
+        </a>
+      </li>
+      {% endif %}
+    </ul>
+
+    <!-- Content -->
+    <div id="content-wrapper">
+
+      <div class="container-fluid">
+
+        <!-- Breadcrumbs-->
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <a href="#">Add or Delete Movies</a>
+          </li>
+        </ol>
+
+        <div class="card my-4">
+          <h5 class="card-header">Add Movie</h5>
+          <div class="card-body">
+            <form action="{{ url_for('add_delete_movie') }}" method="post" role="form">
+              {{ add_form.csrf_token }}
+              <div class="form-group">
+                <label for="title">Movie Title</label>
+                <input type="text" class="form-control" id="title" name="title">
+                {% for message in add_form.title.errors %}
+                  <div style="color:red;"> {{ message }} </div>
+                {% endfor %}
+                <br>
+              </div>
+              <div class="form-group">
+                <label for="genre">Genre</label>
+                <select class="form-control" id="genre" name="genre">
+                  <option>Please Select</option>
+                  {% for genre in genre_list %}
+                    <option>{{ genre }}</option>
+                  {% endfor %}
+                </select>
+                {% for message in add_form.genre.errors %}
+                  <div style="color:red;"> {{ message }} </div>
+                {% endfor %}
+              </div>
+              <button type="submit" name = "add" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
         </div>
+
+        <div class="card my-4">
+          <h5 class="card-header">Delete Movie</h5>
+          <div class="card-body">
+            <form action="{{ url_for('add_delete_movie') }}" method="post" role="form">
+              {{ delete_form.csrf_token }}
+              <select class="form-control" id="title" name="title">
+                <option>Please Select</option>
+                {% for movie in movie_list %}
+                  {% include '_movie_select.html' %}
+                {% endfor %}
+              </select>
+              <button type="submit" name="delete" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
+        </div>
+
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+        {% for message in messages %}
+            {% if "Error" not in message[1]: %}
+                <div class="alert alert-info">
+                <strong>Success! </strong> {{ message[1] }}
+                </div>
+            {% endif %}
+            {% if "Error" in message[1]: %}
+                <div class="alert alert-danger">
+                <strong>Error: </strong> {{ message[1] }}
+                </div>
+            {% endif %}
+        {% endfor %}
+            {% endif %}
+        {% endwith %}
+
     </div>
+  </div>
+</div>
+
+
 {% endblock %}
