--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -1,10 +1,126 @@
 {% extends "base.html" %}
-{% import 'bootstrap/wtf.html' as wtf %}
-{% block app_content %}
-    <h1>Edit Profile</h1>
-    <div class="row">
-        <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
+
+{% block navbar %}
+
+<nav class="navbar navbar-expand navbar-dark bg-dark fixed-top">
+
+    <a class="navbar-brand mr-1" href="{{ url_for('index') }}">MovieVote</a>
+
+    <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
+      <i class="fa fa-bars"></i>
+    </button>
+
+    <!-- Navbar -->
+    <ul class="navbar-nav ml-auto">
+      {% if current_user.is_anonymous %}
+      <li class="nav-item">
+      <a class="nav-link" href="{{ url_for('login') }}"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
+      </li>
+      {% else %}
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('user', username=current_user.username) }}"> <i class="fa fa-user-o" aria-hidden="true"></i> Profile</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('logout') }}"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a>
+      </li>
+      {% endif %}
+    </ul>
+
+  </nav>
+
+{% endblock %}
+
+{% block app_content%}
+  <div id="wrapper">
+
+
+    <!-- Sidebar -->
+
+    <ul class="sidebar navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="{{ url_for('leaderboard') }}">
+          <i class="fa fa-imdb" aria-hidden="true"></i> Leaderboard
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('suggestions') }}">
+          <i class="fa fa-commenting" aria-hidden="true"></i> Suggest Movies or Polls
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('vote') }}">
+          <i class="fa fa-check-square-o" aria-hidden="true"></i> Vote
+        </a>
+      </li>
+      {% if current_user.admin == True %}
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('add_delete_movie') }}">
+          <i class="fa fa-plus-square" aria-hidden="true"></i>
+          Add or <i class="fa fa-minus-square" aria-hidden="true"></i> Delete Movies
+        </a>
+      </li>
+      {% endif %}
+    </ul>
+
+    <!-- Content -->
+    <div id="content-wrapper">
+
+      <div class="container-fluid">
+
+        <!-- Breadcrumbs-->
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <a href="#">Edit Profile</a>
+          </li>
+        </ol>
+
+        <div class="card my-4">
+          <h5 class="card-header">Edit your profile:</h5>
+          <div class="card-body">
+            <form action="{{ url_for('edit_profile') }}" method="post" role="form">
+              {{ form.csrf_token }}
+              <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" class="form-control" id="username" name="username" placeholder="Want to change your username?">
+                {% for message in form.username.errors %}
+                  <div style="color:red;"> {{ message }} </div>
+                {% endfor %}
+                <br>
+              </div>
+              <div class="form-group">
+                <label for="about_me">About me</label>
+                <input type="text" class="form-control" id="about_me" name="about_me" placeholder="Tell us about your favourite movie">
+                {% for message in form.about_me.errors %}
+                  <div style="color:red;"> {{ message }} </div>
+                {% endfor %}
+                <br>
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
         </div>
+
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+        {% for message in messages %}
+            {% if "Error" not in message[1]: %}
+                <div class="alert alert-info">
+                <strong>Success! </strong> {{ message[1] }}
+                </div>
+            {% endif %}
+            {% if "Error" in message[1]: %}
+                <div class="alert alert-danger">
+                <strong>Error: </strong> {{ message[1] }}
+                </div>
+            {% endif %}
+        {% endfor %}
+            {% endif %}
+        {% endwith %}
+
+
     </div>
+  </div>
+</div>
+
+
 {% endblock %}
