--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,17 +1,82 @@
-{% extends 'base.html' %}
-{% import 'bootstrap/wtf.html' as wtf %}
-
+{% extends "base.html" %}
 {% block app_content %}
-    <h1>Sign In</h1>
+<div class="container-fluid"> <!-- this is to make it responsive to your screen width -->
     <div class="row">
-        <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
+        <div class="pageinfo text-light bg-dark">  <!-- myClassName is defined in my CSS as you defined your container -->
+            <h1 class="text-center"> Welcome To MovieVote </h1>
+            <p class="text-center"> At MovieVote, we need your opinions on your favourite movies to once and for all see what comes out on top. <p>
         </div>
     </div>
-    <br>
-    <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
-    <p>
-        Forgot Your Password?
-        <a href="{{ url_for('reset_password_request') }}">Click to Reset It</a>
-    </p>
+</div>
+
+<div class="rounded login-wrapper well">
+      <!-- Wrap the .navbar in .container to center it within the absolutely positioned parent. -->
+      <div class="container">
+        <div class="container-inner text-light">
+            <h5>Please Login</h5>
+            <div class="container-inner text-light">
+              <form action="{{  url_for('login')  }}" method="post" role="form">
+                {{ form.csrf_token }}
+                <div class="form-group">
+                  <label for="post">Username</label>
+                  <input type="text" class="form-control" id="username" name="username">
+                  {% for message in form.username.errors %}
+                    <div style="color:red;"> {{ message }} </div>
+                  {% endfor %}
+                </div>
+                <div class="form-group">
+                  <label for="post">Password</label>
+                  <input type="password" class="form-control" id="password" name="password">
+                  {% for message in form.password.errors %}
+                    <div style="color:red;"> {{ message }} </div>
+                  {% endfor %}
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="True" id="remember_me" name="remember_me" checked="True">
+                  <label class="form-check-label" for="remember_me">
+                    Remember Me
+                  </label>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+            </div>
+        </div>
+      </div> <!-- /.container -->
+</div>
+
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner-new">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="{{ url_for('static', filename='Interstellar2.jpg') }}" alt="First slide">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Movies take us to other worlds..</h5>
+            </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="{{ url_for('static', filename='Endgame3.png') }}" alt="Second slide">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Movies inspire us..</h5>
+            </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="{{ url_for('static', filename='HarryPotterDeathlyHallows2.jpg') }}" alt="Third slide">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Movies bring magic to our lives..</h5>
+            </div>
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
 {% endblock %}
