Small changes to design + js user popup

--- a/app/templates/leaderboard2.html
+++ b/app/templates/leaderboard2.html
@@ -44,7 +44,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('suggestions') }}">
-          <i class="fa fa-commenting" aria-hidden="true"></i> Suggest Movies or Polls
+          <i class="fa fa-commenting" aria-hidden="true"></i> Suggest Movies
         </a>
       </li>
       <li class="nav-item">
