--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -8,3 +8,12 @@
     </div>
   </div>
 </div>
+
+<!-- USER POPUP -->
+{% set user_link %}
+<span class="user_popup">
+    <a href="{{ url_for('user', username=post.author.username) }}">
+        {{ post.author.username }}
+    </a>
+</span>
+{% endset %}
